# jsonl-datasets

./: pyproject.toml
src/jsonl_datasets/: __init__.py  io.py  readers.py  writers.py
tests/: test_readers.py  test_writers.py
